// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DebugPanel Component Tests > renders radio buttons for search sources 1`] = `
<div
  class="sc-kFCroH IqMcE"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-irLvIq cxLSMH"
  >
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        checked=""
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects no radio button when VITE_SEARCH_SOURCE has a bad value 1`] = `
<div
  class="sc-kFCroH IqMcE"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-irLvIq cxLSMH"
  >
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "AI Lab LlamaIndex" radio button when VITE_SEARCH_SOURCE is llamaindex 1`] = `
<div
  class="sc-kFCroH IqMcE"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-irLvIq cxLSMH"
  >
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        checked=""
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "AI Lab" radio button when VITE_SEARCH_SOURCE is ailab 1`] = `
<div
  class="sc-kFCroH IqMcE"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-irLvIq cxLSMH"
  >
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        checked=""
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "Azure AI" radio button when VITE_SEARCH_SOURCE is azure 1`] = `
<div
  class="sc-kFCroH IqMcE"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-irLvIq cxLSMH"
  >
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        checked=""
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-csKJxZ kZvwRK"
    >
      <input
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-eTNRI dNRwTo"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;
